# serializer version: 1
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[datetime-event]
  shape: (239, 9)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ time        ┆ duration    ┆ flag_valid ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ i64         ┆ bool       ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆             ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 15551990000 ┆ false      ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-13  ┆ 22463990000 ┆ true       ┆ … ┆ null       ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.594354,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 1   ┆ 2000-11-29  ┆ 20735990000 ┆ true       ┆ … ┆ null       ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.210704,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 1   ┆ 2000-12-04  ┆ 18143990000 ┆ true       ┆ … ┆ null       ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.616262,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 1   ┆ 2000-12-10  ┆ 25055990000 ┆ true       ┆ … ┆ null       ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆ 0.234212,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 49  ┆ 2000-06-05  ┆ 16415990000 ┆ null       ┆ … ┆ 24826      ┆ ok      ┆ null       ┆ -0.14406  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 16415990000 ┆ null       ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-12-30  ┆ 15551990000 ┆ null       ┆ … ┆ 16251      ┆ ok      ┆ null       ┆ 0.829838  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-01-18  ┆ 19871990000 ┆ null       ┆ … ┆ 8431       ┆ ok      ┆ null       ┆ 1.595954  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-02-11  ┆ 12959990000 ┆ null       ┆ … ┆ 26395      ┆ ok      ┆ null       ┆ 2.451282  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[datetime-interval]
  shape: (239, 10)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration   ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64        ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 2000-10-22  ┆ 1555199000 ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-13  ┆ 2000-11-07  ┆ 2246399000 ┆ … ┆ null       ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.594354,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 1   ┆ 2000-11-29  ┆ 2000-12-22  ┆ 2073599000 ┆ … ┆ null       ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.210704,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 1   ┆ 2000-12-04  ┆ 2000-12-24  ┆ 1814399000 ┆ … ┆ null       ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.616262,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 1   ┆ 2000-12-10  ┆ 2001-01-07  ┆ 2505599000 ┆ … ┆ null       ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆ 0.234212,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 49  ┆ 2000-06-05  ┆ 2000-06-23  ┆ 1641599000 ┆ … ┆ 24826      ┆ ok      ┆ null       ┆ -0.14406  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 2000-12-10  ┆ 1641599000 ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-12-30  ┆ 2001-01-16  ┆ 1555199000 ┆ … ┆ 16251      ┆ ok      ┆ null       ┆ 0.829838  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-01-18  ┆ 2001-02-09  ┆ 1987199000 ┆ … ┆ 8431       ┆ ok      ┆ null       ┆ 1.595954  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-02-11  ┆ 2001-02-25  ┆ 1295999000 ┆ … ┆ 26395      ┆ ok      ┆ null       ┆ 2.451282  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[datetime-state]
  shape: (239, 10)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration   ┆ … ┆ response_t ┆ status  ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ ime        ┆ ---     ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64        ┆   ┆ ---        ┆ str     ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆            ┆   ┆ i64        ┆         ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-05  ┆ 2000-10-13  ┆ 1555199000 ┆ … ┆ null       ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆ 0.725006,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 1   ┆ 2000-10-13  ┆ 2000-10-25  ┆ 2246399000 ┆ … ┆ null       ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆ 0.594354,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 1   ┆ 2000-11-29  ┆ 2000-12-04  ┆ 2073599000 ┆ … ┆ null       ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆ 0.210704,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 1   ┆ 2000-12-04  ┆ 2000-12-10  ┆ 1814399000 ┆ … ┆ null       ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆ 0.616262,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 1   ┆ 2000-12-10  ┆ 2001-01-08  ┆ 2505599000 ┆ … ┆ null       ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆ 0.234212,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 49  ┆ 2000-06-05  ┆ null        ┆ 1641599000 ┆ … ┆ 24826      ┆ ok      ┆ null       ┆ -0.14406  │
  │     ┆ 00:00:00    ┆             ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-11-22  ┆ 2000-12-30  ┆ 1641599000 ┆ … ┆ 35807      ┆ warn    ┆ null       ┆ -0.942775 │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2000-12-30  ┆ 2001-01-18  ┆ 1555199000 ┆ … ┆ 16251      ┆ ok      ┆ null       ┆ 0.829838  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-01-18  ┆ 2001-02-11  ┆ 1987199000 ┆ … ┆ 8431       ┆ ok      ┆ null       ┆ 1.595954  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  │ 50  ┆ 2001-02-11  ┆ null        ┆ 1295999000 ┆ … ┆ 26395      ┆ ok      ┆ null       ┆ 2.451282  │
  │     ┆ 00:00:00    ┆             ┆ 000        ┆   ┆            ┆         ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[timestep-event]
  shape: (245, 8)
  ┌─────┬───────┬───────────┬────────────┬───────────────┬─────────┬─────────────────────┬───────────┐
  │ id  ┆ time  ┆ duration  ┆ flag_valid ┆ response_time ┆ status  ┆ token_emb           ┆ value     │
  │ --- ┆ ---   ┆ ---       ┆ ---        ┆ ---           ┆ ---     ┆ ---                 ┆ ---       │
  │ i64 ┆ f64   ┆ f64       ┆ bool       ┆ i64           ┆ str     ┆ array[f32, 32]      ┆ f64       │
  ╞═════╪═══════╪═══════════╪════════════╪═══════════════╪═════════╪═════════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 17.999988 ┆ false      ┆ null          ┆ pending ┆ [0.764766, 0.52712, ┆ -1.463386 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.126464…         ┆           │
  │ 1   ┆ 286.0 ┆ 25.999988 ┆ true       ┆ null          ┆ pending ┆ [0.356086, 0.61515, ┆ 1.645544  │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.074617…         ┆           │
  │ 1   ┆ 298.0 ┆ 23.999988 ┆ true       ┆ null          ┆ warn    ┆ [0.45854, 0.092267, ┆ -0.569401 │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.230326…         ┆           │
  │ 1   ┆ 304.0 ┆ 27.999988 ┆ true       ┆ null          ┆ pending ┆ [0.951114,          ┆ 0.199385  │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.319548, …         ┆           │
  │     ┆       ┆           ┆            ┆               ┆         ┆ 0.13458…            ┆           │
  │ 1   ┆ 333.0 ┆ 23.999988 ┆ true       ┆ null          ┆ pending ┆ [0.333197, 0.48291, ┆ 0.248016  │
  │     ┆       ┆           ┆            ┆               ┆         ┆ … 0.918873…         ┆           │
  │ …   ┆ …     ┆ …         ┆ …          ┆ …             ┆ …       ┆ …                   ┆ …         │
  │ 50  ┆ 322.0 ┆ 17.999988 ┆ null       ┆ 36795         ┆ pending ┆ null                ┆ -0.295043 │
  │ 50  ┆ 326.0 ┆ 18.999988 ┆ null       ┆ 9766          ┆ error   ┆ null                ┆ -1.032358 │
  │ 50  ┆ 364.0 ┆ 17.999988 ┆ null       ┆ 10727         ┆ error   ┆ null                ┆ -0.474862 │
  │ 50  ┆ 383.0 ┆ 22.999988 ┆ null       ┆ 43294         ┆ pending ┆ null                ┆ 1.302775  │
  │ 50  ┆ 407.0 ┆ 14.999988 ┆ null       ┆ 42449         ┆ ok      ┆ null                ┆ -0.490614 │
  └─────┴───────┴───────────┴────────────┴───────────────┴─────────┴─────────────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[timestep-interval]
  shape: (245, 9)
  ┌─────┬───────┬────────────┬───────────┬───┬───────────────┬─────────┬─────────────────┬───────────┐
  │ id  ┆ start ┆ end        ┆ duration  ┆ … ┆ response_time ┆ status  ┆ token_emb       ┆ value     │
  │ --- ┆ ---   ┆ ---        ┆ ---       ┆   ┆ ---           ┆ ---     ┆ ---             ┆ ---       │
  │ i64 ┆ f64   ┆ f64        ┆ f64       ┆   ┆ i64           ┆ str     ┆ array[f32, 32]  ┆ f64       │
  ╞═════╪═══════╪════════════╪═══════════╪═══╪═══════════════╪═════════╪═════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 295.999988 ┆ 17.999988 ┆ … ┆ null          ┆ pending ┆ [0.764766,      ┆ -1.463386 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.52712, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.126464…       ┆           │
  │ 1   ┆ 286.0 ┆ 311.999988 ┆ 25.999988 ┆ … ┆ null          ┆ pending ┆ [0.356086,      ┆ 1.645544  │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.61515, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.074617…       ┆           │
  │ 1   ┆ 298.0 ┆ 321.999988 ┆ 23.999988 ┆ … ┆ null          ┆ warn    ┆ [0.45854,       ┆ -0.569401 │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.092267, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.230326…       ┆           │
  │ 1   ┆ 304.0 ┆ 331.999988 ┆ 27.999988 ┆ … ┆ null          ┆ pending ┆ [0.951114,      ┆ 0.199385  │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.319548, …     ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.13458…        ┆           │
  │ 1   ┆ 333.0 ┆ 356.999988 ┆ 23.999988 ┆ … ┆ null          ┆ pending ┆ [0.333197,      ┆ 0.248016  │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.48291, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆         ┆ 0.918873…       ┆           │
  │ …   ┆ …     ┆ …          ┆ …         ┆ … ┆ …             ┆ …       ┆ …               ┆ …         │
  │ 50  ┆ 322.0 ┆ 339.999988 ┆ 17.999988 ┆ … ┆ 36795         ┆ pending ┆ null            ┆ -0.295043 │
  │ 50  ┆ 326.0 ┆ 344.999988 ┆ 18.999988 ┆ … ┆ 9766          ┆ error   ┆ null            ┆ -1.032358 │
  │ 50  ┆ 364.0 ┆ 381.999988 ┆ 17.999988 ┆ … ┆ 10727         ┆ error   ┆ null            ┆ -0.474862 │
  │ 50  ┆ 383.0 ┆ 405.999988 ┆ 22.999988 ┆ … ┆ 43294         ┆ pending ┆ null            ┆ 1.302775  │
  │ 50  ┆ 407.0 ┆ 421.999988 ┆ 14.999988 ┆ … ┆ 42449         ┆ ok      ┆ null            ┆ -0.490614 │
  └─────┴───────┴────────────┴───────────┴───┴───────────────┴─────────┴─────────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_present_false_excludes_witnesses[timestep-state]
  shape: (245, 9)
  ┌─────┬───────┬───────┬───────────┬───┬───────────────┬─────────┬──────────────────────┬───────────┐
  │ id  ┆ start ┆ end   ┆ duration  ┆ … ┆ response_time ┆ status  ┆ token_emb            ┆ value     │
  │ --- ┆ ---   ┆ ---   ┆ ---       ┆   ┆ ---           ┆ ---     ┆ ---                  ┆ ---       │
  │ i64 ┆ f64   ┆ f64   ┆ f64       ┆   ┆ i64           ┆ str     ┆ array[f32, 32]       ┆ f64       │
  ╞═════╪═══════╪═══════╪═══════════╪═══╪═══════════════╪═════════╪══════════════════════╪═══════════╡
  │ 1   ┆ 278.0 ┆ 286.0 ┆ 17.999988 ┆ … ┆ null          ┆ pending ┆ [0.764766, 0.52712,  ┆ -1.463386 │
  │     ┆       ┆       ┆           ┆   ┆               ┆         ┆ … 0.126464…          ┆           │
  │ 1   ┆ 286.0 ┆ 298.0 ┆ 25.999988 ┆ … ┆ null          ┆ pending ┆ [0.356086, 0.61515,  ┆ 1.645544  │
  │     ┆       ┆       ┆           ┆   ┆               ┆         ┆ … 0.074617…          ┆           │
  │ 1   ┆ 298.0 ┆ 304.0 ┆ 23.999988 ┆ … ┆ null          ┆ warn    ┆ [0.45854, 0.092267,  ┆ -0.569401 │
  │     ┆       ┆       ┆           ┆   ┆               ┆         ┆ … 0.230326…          ┆           │
  │ 1   ┆ 304.0 ┆ 333.0 ┆ 27.999988 ┆ … ┆ null          ┆ pending ┆ [0.951114, 0.319548, ┆ 0.199385  │
  │     ┆       ┆       ┆           ┆   ┆               ┆         ┆ … 0.13458…           ┆           │
  │ 1   ┆ 333.0 ┆ 338.0 ┆ 23.999988 ┆ … ┆ null          ┆ pending ┆ [0.333197, 0.48291,  ┆ 0.248016  │
  │     ┆       ┆       ┆           ┆   ┆               ┆         ┆ … 0.918873…          ┆           │
  │ …   ┆ …     ┆ …     ┆ …         ┆ … ┆ …             ┆ …       ┆ …                    ┆ …         │
  │ 50  ┆ 322.0 ┆ 326.0 ┆ 17.999988 ┆ … ┆ 36795         ┆ pending ┆ null                 ┆ -0.295043 │
  │ 50  ┆ 326.0 ┆ 364.0 ┆ 18.999988 ┆ … ┆ 9766          ┆ error   ┆ null                 ┆ -1.032358 │
  │ 50  ┆ 364.0 ┆ 383.0 ┆ 17.999988 ┆ … ┆ 10727         ┆ error   ┆ null                 ┆ -0.474862 │
  │ 50  ┆ 383.0 ┆ 407.0 ┆ 22.999988 ┆ … ┆ 43294         ┆ pending ┆ null                 ┆ 1.302775  │
  │ 50  ┆ 407.0 ┆ null  ┆ 14.999988 ┆ … ┆ 42449         ┆ ok      ┆ null                 ┆ -0.490614 │
  └─────┴───────┴───────┴───────────┴───┴───────────────┴─────────┴──────────────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[datetime-event]
  shape: (28, 9)
  ┌─────┬─────────────┬─────────────┬────────────┬───┬─────────────┬────────┬────────────┬───────────┐
  │ id  ┆ time        ┆ duration    ┆ flag_valid ┆ … ┆ response_ti ┆ status ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---        ┆   ┆ me          ┆ ---    ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ i64         ┆ bool       ┆   ┆ ---         ┆ str    ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆             ┆            ┆   ┆ i64         ┆        ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪════════════╪═══╪═════════════╪════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-25  ┆ 20735990000 ┆ true       ┆ … ┆ null        ┆ error  ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.29341… ┆           │
  │ 1   ┆ 2000-10-31  ┆ 24191990000 ┆ true       ┆ … ┆ null        ┆ ok     ┆ [0.193563, ┆ 0.169945  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.382689,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.78663… ┆           │
  │ 7   ┆ 2000-05-29  ┆ 95039900000 ┆ true       ┆ … ┆ null        ┆ error  ┆ [0.324428, ┆ 0.025418  │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆             ┆        ┆ 0.367788,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ … 0.44648… ┆           │
  │ 7   ┆ 2000-06-11  ┆ 24191990000 ┆ true       ┆ … ┆ null        ┆ ok     ┆ [0.84813,  ┆ 0.262713  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.956332,  ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ …          ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ 0.537099…  ┆           │
  │ 12  ┆ 2000-09-13  ┆ 17279990000 ┆ true       ┆ … ┆ null        ┆ error  ┆ [0.610121, ┆ 0.113753  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆ 0.67429, … ┆           │
  │     ┆             ┆             ┆            ┆   ┆             ┆        ┆ 0.309444…  ┆           │
  │ …   ┆ …           ┆ …           ┆ …          ┆ … ┆ …           ┆ …      ┆ …          ┆ …         │
  │ 41  ┆ 2000-07-08  ┆ 11231990000 ┆ null       ┆ … ┆ 1103        ┆ ok     ┆ null       ┆ -0.714237 │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 46  ┆ 2000-08-15  ┆ 13823990000 ┆ null       ┆ … ┆ 7215        ┆ error  ┆ null       ┆ 0.745596  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 46  ┆ 2000-09-14  ┆ 19871990000 ┆ null       ┆ … ┆ 21720       ┆ ok     ┆ null       ┆ 0.629542  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 95039900000 ┆ null       ┆ … ┆ 40110       ┆ error  ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 0           ┆            ┆   ┆             ┆        ┆            ┆           │
  │ 50  ┆ 2000-11-18  ┆ 15551990000 ┆ null       ┆ … ┆ 36703       ┆ ok     ┆ null       ┆ 0.925687  │
  │     ┆ 00:00:00    ┆ 00          ┆            ┆   ┆             ┆        ┆            ┆           │
  └─────┴─────────────┴─────────────┴────────────┴───┴─────────────┴────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[datetime-interval]
  shape: (28, 10)
  ┌─────┬─────────────┬─────────────┬─────────────┬───┬────────────┬────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration    ┆ … ┆ response_t ┆ status ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---         ┆   ┆ ime        ┆ ---    ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64         ┆   ┆ ---        ┆ str    ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆             ┆   ┆ i64        ┆        ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪═════════════╪═══╪════════════╪════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-25  ┆ 2000-11-17  ┆ 20735990000 ┆ … ┆ null       ┆ error  ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.29341… ┆           │
  │ 1   ┆ 2000-10-31  ┆ 2000-11-27  ┆ 24191990000 ┆ … ┆ null       ┆ ok     ┆ [0.193563, ┆ 0.169945  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.382689,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.78663… ┆           │
  │ 7   ┆ 2000-05-29  ┆ 2000-06-08  ┆ 95039900000 ┆ … ┆ null       ┆ error  ┆ [0.324428, ┆ 0.025418  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 0           ┆   ┆            ┆        ┆ 0.367788,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.44648… ┆           │
  │ 7   ┆ 2000-06-11  ┆ 2000-07-08  ┆ 24191990000 ┆ … ┆ null       ┆ ok     ┆ [0.84813,  ┆ 0.262713  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.956332,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ …          ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ 0.537099…  ┆           │
  │ 12  ┆ 2000-09-13  ┆ 2000-10-02  ┆ 17279990000 ┆ … ┆ null       ┆ error  ┆ [0.610121, ┆ 0.113753  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆ 0.67429, … ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ 0.309444…  ┆           │
  │ …   ┆ …           ┆ …           ┆ …           ┆ … ┆ …          ┆ …      ┆ …          ┆ …         │
  │ 41  ┆ 2000-07-08  ┆ 2000-07-20  ┆ 11231990000 ┆ … ┆ 1103       ┆ ok     ┆ null       ┆ -0.714237 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 46  ┆ 2000-08-15  ┆ 2000-08-30  ┆ 13823990000 ┆ … ┆ 7215       ┆ error  ┆ null       ┆ 0.745596  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 46  ┆ 2000-09-14  ┆ 2000-10-06  ┆ 19871990000 ┆ … ┆ 21720      ┆ ok     ┆ null       ┆ 0.629542  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 2000-11-09  ┆ 95039900000 ┆ … ┆ 40110      ┆ error  ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 0           ┆   ┆            ┆        ┆            ┆           │
  │ 50  ┆ 2000-11-18  ┆ 2000-12-05  ┆ 15551990000 ┆ … ┆ 36703      ┆ ok     ┆ null       ┆ 0.925687  │
  │     ┆ 00:00:00    ┆ 23:59:59    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  └─────┴─────────────┴─────────────┴─────────────┴───┴────────────┴────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[datetime-state]
  shape: (28, 10)
  ┌─────┬─────────────┬─────────────┬─────────────┬───┬────────────┬────────┬────────────┬───────────┐
  │ id  ┆ start       ┆ end         ┆ duration    ┆ … ┆ response_t ┆ status ┆ token_emb  ┆ value     │
  │ --- ┆ ---         ┆ ---         ┆ ---         ┆   ┆ ime        ┆ ---    ┆ ---        ┆ ---       │
  │ i64 ┆ datetime[μs ┆ datetime[μs ┆ i64         ┆   ┆ ---        ┆ str    ┆ array[f32, ┆ f64       │
  │     ┆ ]           ┆ ]           ┆             ┆   ┆ i64        ┆        ┆ 32]        ┆           │
  ╞═════╪═════════════╪═════════════╪═════════════╪═══╪════════════╪════════╪════════════╪═══════════╡
  │ 1   ┆ 2000-10-25  ┆ 2000-10-31  ┆ 20735990000 ┆ … ┆ null       ┆ error  ┆ [0.830483, ┆ -0.208379 │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆ 0.678199,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.29341… ┆           │
  │ 1   ┆ 2000-10-31  ┆ 2000-11-29  ┆ 24191990000 ┆ … ┆ null       ┆ ok     ┆ [0.193563, ┆ 0.169945  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆ 0.382689,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.78663… ┆           │
  │ 7   ┆ 2000-05-29  ┆ 2000-06-11  ┆ 95039900000 ┆ … ┆ null       ┆ error  ┆ [0.324428, ┆ 0.025418  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 0           ┆   ┆            ┆        ┆ 0.367788,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ … 0.44648… ┆           │
  │ 7   ┆ 2000-06-11  ┆ null        ┆ 24191990000 ┆ … ┆ null       ┆ ok     ┆ [0.84813,  ┆ 0.262713  │
  │     ┆ 00:00:00    ┆             ┆ 00          ┆   ┆            ┆        ┆ 0.956332,  ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ …          ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ 0.537099…  ┆           │
  │ 12  ┆ 2000-09-13  ┆ 2000-10-14  ┆ 17279990000 ┆ … ┆ null       ┆ error  ┆ [0.610121, ┆ 0.113753  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆ 0.67429, … ┆           │
  │     ┆             ┆             ┆             ┆   ┆            ┆        ┆ 0.309444…  ┆           │
  │ …   ┆ …           ┆ …           ┆ …           ┆ … ┆ …          ┆ …      ┆ …          ┆ …         │
  │ 41  ┆ 2000-07-08  ┆ 2000-07-22  ┆ 11231990000 ┆ … ┆ 1103       ┆ ok     ┆ null       ┆ -0.714237 │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 46  ┆ 2000-08-15  ┆ 2000-09-14  ┆ 13823990000 ┆ … ┆ 7215       ┆ error  ┆ null       ┆ 0.745596  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 46  ┆ 2000-09-14  ┆ 2000-10-23  ┆ 19871990000 ┆ … ┆ 21720      ┆ ok     ┆ null       ┆ 0.629542  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  │ 50  ┆ 2000-10-30  ┆ 2000-11-18  ┆ 95039900000 ┆ … ┆ 40110      ┆ error  ┆ null       ┆ -0.571799 │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 0           ┆   ┆            ┆        ┆            ┆           │
  │ 50  ┆ 2000-11-18  ┆ 2000-11-22  ┆ 15551990000 ┆ … ┆ 36703      ┆ ok     ┆ null       ┆ 0.925687  │
  │     ┆ 00:00:00    ┆ 00:00:00    ┆ 00          ┆   ┆            ┆        ┆            ┆           │
  └─────┴─────────────┴─────────────┴─────────────┴───┴────────────┴────────┴────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[timestep-event]
  shape: (22, 8)
  ┌─────┬───────┬───────────┬────────────┬───────────────┬────────┬──────────────────────┬───────────┐
  │ id  ┆ time  ┆ duration  ┆ flag_valid ┆ response_time ┆ status ┆ token_emb            ┆ value     │
  │ --- ┆ ---   ┆ ---       ┆ ---        ┆ ---           ┆ ---    ┆ ---                  ┆ ---       │
  │ i64 ┆ f64   ┆ f64       ┆ bool       ┆ i64           ┆ str    ┆ array[f32, 32]       ┆ f64       │
  ╞═════╪═══════╪═══════════╪════════════╪═══════════════╪════════╪══════════════════════╪═══════════╡
  │ 1   ┆ 344.0 ┆ 28.999988 ┆ false      ┆ null          ┆ error  ┆ [0.676314, 0.504547, ┆ 0.430945  │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.43409…           ┆           │
  │ 1   ┆ 373.0 ┆ 27.999988 ┆ true       ┆ null          ┆ ok     ┆ [0.956934, 0.362068, ┆ -0.882414 │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.59380…           ┆           │
  │ 2   ┆ 172.0 ┆ 19.999988 ┆ true       ┆ null          ┆ error  ┆ [0.658153, 0.230153, ┆ -0.411943 │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.25054…           ┆           │
  │ 2   ┆ 193.0 ┆ 17.999988 ┆ true       ┆ null          ┆ ok     ┆ [0.214746, 0.11418,  ┆ -0.672245 │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.484456…          ┆           │
  │ 11  ┆ 335.0 ┆ 25.999988 ┆ true       ┆ null          ┆ error  ┆ [0.750507, 0.545048, ┆ 0.558667  │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.71842…           ┆           │
  │ …   ┆ …     ┆ …         ┆ …          ┆ …             ┆ …      ┆ …                    ┆ …         │
  │ 34  ┆ 132.0 ┆ 9.999988  ┆ true       ┆ null          ┆ ok     ┆ [0.709491, 0.996044, ┆ -0.770296 │
  │     ┆       ┆           ┆            ┆               ┆        ┆ … 0.24194…           ┆           │
  │ 43  ┆ 118.0 ┆ 9.999988  ┆ null       ┆ 49903         ┆ error  ┆ null                 ┆ 0.941445  │
  │ 43  ┆ 129.0 ┆ 27.999988 ┆ null       ┆ 5641          ┆ ok     ┆ null                 ┆ -0.25257  │
  │ 47  ┆ 71.0  ┆ 11.999988 ┆ null       ┆ 32489         ┆ error  ┆ null                 ┆ -0.062582 │
  │ 47  ┆ 83.0  ┆ 24.999988 ┆ null       ┆ 48799         ┆ ok     ┆ null                 ┆ -0.704874 │
  └─────┴───────┴───────────┴────────────┴───────────────┴────────┴──────────────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[timestep-interval]
  shape: (22, 9)
  ┌─────┬───────┬────────────┬───────────┬───┬───────────────┬────────┬──────────────────┬───────────┐
  │ id  ┆ start ┆ end        ┆ duration  ┆ … ┆ response_time ┆ status ┆ token_emb        ┆ value     │
  │ --- ┆ ---   ┆ ---        ┆ ---       ┆   ┆ ---           ┆ ---    ┆ ---              ┆ ---       │
  │ i64 ┆ f64   ┆ f64        ┆ f64       ┆   ┆ i64           ┆ str    ┆ array[f32, 32]   ┆ f64       │
  ╞═════╪═══════╪════════════╪═══════════╪═══╪═══════════════╪════════╪══════════════════╪═══════════╡
  │ 1   ┆ 344.0 ┆ 372.999988 ┆ 28.999988 ┆ … ┆ null          ┆ error  ┆ [0.676314,       ┆ 0.430945  │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.504547, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.43409…         ┆           │
  │ 1   ┆ 373.0 ┆ 400.999988 ┆ 27.999988 ┆ … ┆ null          ┆ ok     ┆ [0.956934,       ┆ -0.882414 │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.362068, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.59380…         ┆           │
  │ 2   ┆ 172.0 ┆ 191.999988 ┆ 19.999988 ┆ … ┆ null          ┆ error  ┆ [0.658153,       ┆ -0.411943 │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.230153, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.25054…         ┆           │
  │ 2   ┆ 193.0 ┆ 210.999988 ┆ 17.999988 ┆ … ┆ null          ┆ ok     ┆ [0.214746,       ┆ -0.672245 │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.11418, …       ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.484456…        ┆           │
  │ 11  ┆ 335.0 ┆ 360.999988 ┆ 25.999988 ┆ … ┆ null          ┆ error  ┆ [0.750507,       ┆ 0.558667  │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.545048, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.71842…         ┆           │
  │ …   ┆ …     ┆ …          ┆ …         ┆ … ┆ …             ┆ …      ┆ …                ┆ …         │
  │ 34  ┆ 132.0 ┆ 141.999988 ┆ 9.999988  ┆ … ┆ null          ┆ ok     ┆ [0.709491,       ┆ -0.770296 │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.996044, …      ┆           │
  │     ┆       ┆            ┆           ┆   ┆               ┆        ┆ 0.24194…         ┆           │
  │ 43  ┆ 118.0 ┆ 127.999988 ┆ 9.999988  ┆ … ┆ 49903         ┆ error  ┆ null             ┆ 0.941445  │
  │ 43  ┆ 129.0 ┆ 156.999988 ┆ 27.999988 ┆ … ┆ 5641          ┆ ok     ┆ null             ┆ -0.25257  │
  │ 47  ┆ 71.0  ┆ 82.999988  ┆ 11.999988 ┆ … ┆ 32489         ┆ error  ┆ null             ┆ -0.062582 │
  │ 47  ┆ 83.0  ┆ 107.999988 ┆ 24.999988 ┆ … ┆ 48799         ┆ ok     ┆ null             ┆ -0.704874 │
  └─────┴───────┴────────────┴───────────┴───┴───────────────┴────────┴──────────────────┴───────────┘
# ---
# name: TestPatternCriterionFilterEntities.test_filter_witnesses_snapshot[timestep-state]
  shape: (22, 9)
  ┌─────┬───────┬───────┬───────────┬───┬───────────────┬────────┬───────────────────────┬───────────┐
  │ id  ┆ start ┆ end   ┆ duration  ┆ … ┆ response_time ┆ status ┆ token_emb             ┆ value     │
  │ --- ┆ ---   ┆ ---   ┆ ---       ┆   ┆ ---           ┆ ---    ┆ ---                   ┆ ---       │
  │ i64 ┆ f64   ┆ f64   ┆ f64       ┆   ┆ i64           ┆ str    ┆ array[f32, 32]        ┆ f64       │
  ╞═════╪═══════╪═══════╪═══════════╪═══╪═══════════════╪════════╪═══════════════════════╪═══════════╡
  │ 1   ┆ 344.0 ┆ 373.0 ┆ 28.999988 ┆ … ┆ null          ┆ error  ┆ [0.676314, 0.504547,  ┆ 0.430945  │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ … 0.43409…            ┆           │
  │ 1   ┆ 373.0 ┆ null  ┆ 27.999988 ┆ … ┆ null          ┆ ok     ┆ [0.956934, 0.362068,  ┆ -0.882414 │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ … 0.59380…            ┆           │
  │ 2   ┆ 172.0 ┆ 193.0 ┆ 19.999988 ┆ … ┆ null          ┆ error  ┆ [0.658153, 0.230153,  ┆ -0.411943 │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ … 0.25054…            ┆           │
  │ 2   ┆ 193.0 ┆ 212.0 ┆ 17.999988 ┆ … ┆ null          ┆ ok     ┆ [0.214746, 0.11418, … ┆ -0.672245 │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ 0.484456…             ┆           │
  │ 11  ┆ 335.0 ┆ 362.0 ┆ 25.999988 ┆ … ┆ null          ┆ error  ┆ [0.750507, 0.545048,  ┆ 0.558667  │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ … 0.71842…            ┆           │
  │ …   ┆ …     ┆ …     ┆ …         ┆ … ┆ …             ┆ …      ┆ …                     ┆ …         │
  │ 34  ┆ 132.0 ┆ 144.0 ┆ 9.999988  ┆ … ┆ null          ┆ ok     ┆ [0.709491, 0.996044,  ┆ -0.770296 │
  │     ┆       ┆       ┆           ┆   ┆               ┆        ┆ … 0.24194…            ┆           │
  │ 43  ┆ 118.0 ┆ 129.0 ┆ 9.999988  ┆ … ┆ 49903         ┆ error  ┆ null                  ┆ 0.941445  │
  │ 43  ┆ 129.0 ┆ null  ┆ 27.999988 ┆ … ┆ 5641          ┆ ok     ┆ null                  ┆ -0.25257  │
  │ 47  ┆ 71.0  ┆ 83.0  ┆ 11.999988 ┆ … ┆ 32489         ┆ error  ┆ null                  ┆ -0.062582 │
  │ 47  ┆ 83.0  ┆ 109.0 ┆ 24.999988 ┆ … ┆ 48799         ┆ ok     ┆ null                  ┆ -0.704874 │
  └─────┴───────┴───────┴───────────┴───┴───────────────┴────────┴───────────────────────┴───────────┘
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[datetime-event]
  set({
    1,
    7,
    12,
    14,
    18,
    19,
    21,
    23,
    24,
    30,
    31,
    41,
    46,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[datetime-interval]
  set({
    1,
    7,
    12,
    14,
    18,
    19,
    21,
    23,
    24,
    30,
    31,
    41,
    46,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[datetime-state]
  set({
    1,
    7,
    12,
    14,
    18,
    19,
    21,
    23,
    24,
    30,
    31,
    41,
    46,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[timestep-event]
  set({
    1,
    2,
    11,
    15,
    18,
    26,
    30,
    32,
    34,
    43,
    47,
  })
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[timestep-interval]
  set({
    1,
    2,
    11,
    15,
    18,
    26,
    30,
    32,
    34,
    43,
    47,
  })
# ---
# name: TestPatternCriterionWhich.test_which_adjacent[timestep-state]
  set({
    1,
    2,
    11,
    15,
    18,
    26,
    30,
    32,
    34,
    43,
    47,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[datetime-event]
  set({
    1,
    3,
    7,
    12,
    13,
    14,
    15,
    18,
    19,
    21,
    23,
    24,
    25,
    28,
    29,
    30,
    31,
    40,
    41,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[datetime-interval]
  set({
    1,
    3,
    7,
    12,
    13,
    14,
    15,
    18,
    19,
    21,
    23,
    24,
    25,
    28,
    29,
    30,
    31,
    40,
    41,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[datetime-state]
  set({
    1,
    3,
    7,
    12,
    13,
    14,
    15,
    18,
    19,
    21,
    23,
    24,
    25,
    28,
    29,
    30,
    31,
    40,
    41,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[timestep-event]
  set({
    1,
    2,
    3,
    10,
    11,
    12,
    15,
    16,
    18,
    23,
    25,
    26,
    30,
    32,
    34,
    43,
    47,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[timestep-interval]
  set({
    1,
    2,
    3,
    10,
    11,
    12,
    15,
    16,
    18,
    23,
    25,
    26,
    30,
    32,
    34,
    43,
    47,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_any_gap[timestep-state]
  set({
    1,
    2,
    3,
    10,
    11,
    12,
    15,
    16,
    18,
    23,
    25,
    26,
    30,
    32,
    34,
    43,
    47,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[datetime-event]
  set({
    1,
    3,
    4,
    7,
    9,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    23,
    24,
    25,
    26,
    28,
    29,
    30,
    31,
    34,
    36,
    37,
    40,
    41,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[datetime-interval]
  set({
    1,
    3,
    4,
    7,
    9,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    23,
    24,
    25,
    26,
    28,
    29,
    30,
    31,
    34,
    36,
    37,
    40,
    41,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[datetime-state]
  set({
    1,
    3,
    4,
    7,
    9,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    23,
    24,
    25,
    26,
    28,
    29,
    30,
    31,
    34,
    36,
    37,
    40,
    41,
    44,
    45,
    46,
    47,
    48,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[timestep-event]
  set({
    1,
    2,
    3,
    4,
    5,
    10,
    11,
    12,
    14,
    15,
    16,
    17,
    18,
    19,
    22,
    23,
    25,
    26,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    39,
    40,
    43,
    44,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[timestep-interval]
  set({
    1,
    2,
    3,
    4,
    5,
    10,
    11,
    12,
    14,
    15,
    16,
    17,
    18,
    19,
    22,
    23,
    25,
    26,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    39,
    40,
    43,
    44,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_single_element[timestep-state]
  set({
    1,
    2,
    3,
    4,
    5,
    10,
    11,
    12,
    14,
    15,
    16,
    17,
    18,
    19,
    22,
    23,
    25,
    26,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    39,
    40,
    43,
    44,
    46,
    47,
    49,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[datetime-event]
  set({
    3,
    13,
    15,
    18,
    19,
    28,
    29,
    30,
    31,
    40,
    47,
    49,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[datetime-interval]
  set({
    3,
    13,
    15,
    18,
    19,
    28,
    29,
    30,
    31,
    40,
    47,
    49,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[datetime-state]
  set({
    3,
    13,
    15,
    18,
    19,
    28,
    29,
    30,
    31,
    40,
    47,
    49,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[timestep-event]
  set({
    2,
    10,
    12,
    15,
    16,
    18,
    23,
    25,
    30,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[timestep-interval]
  set({
    2,
    10,
    12,
    15,
    16,
    18,
    23,
    25,
    30,
    50,
  })
# ---
# name: TestPatternCriterionWhich.test_which_wildcard[timestep-state]
  set({
    2,
    10,
    12,
    15,
    16,
    18,
    23,
    25,
    30,
    50,
  })
# ---
